Implement get project columns feature to server
